<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>fr.sii.ogham</groupId>
		<artifactId>ogham-parent</artifactId>
		<version>4.0.0-SNAPSHOT</version>
	</parent>
	<artifactId>ogham-spring-boot-v3-autoconfigure</artifactId>
	<name>Ogham Spring Boot 3 autoconfiguration</name>
	<description>
		Autoconfiguration for Spring Boot 3
	</description>

	<properties>
		<jdk.version>17</jdk.version>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<maven.compiler.release>${jdk.version}</maven.compiler.release>
		<tests.runtime.vmArgs>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</tests.runtime.vmArgs>

		<spring-boot.version>${spring-boot-v3.version}</spring-boot.version>
		<sendgrid-java.version>${sendgrid-java-v4.version}</sendgrid-java.version>
		<thymeleaf.version>${thymeleaf-spring6.version}</thymeleaf.version>

		<maven.site.skip>true</maven.site.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>fr.sii.ogham</groupId>
			<artifactId>ogham-all</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>fr.sii.ogham</groupId>
			<artifactId>ogham-spring-boot-common-autoconfigure</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-autoconfigure</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf-spring6</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!--
			FIXME: hack for Pitest because it complains that javax.mail.MessagingException class doesn't exist. Which is true but
				   why it searches for this class ???
		-->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<scope>provided</scope>
		</dependency>


		<!-- Tests -->
		<dependency>
			<groupId>fr.sii.ogham</groupId>
			<artifactId>ogham-test-utils</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>fr.sii.ogham.internal</groupId>
			<artifactId>ogham-test-utils-internal</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-freemarker</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- Fix dependency management conflict with Spring Boot -->
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit-jupiter.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Import dependency management from Spring Boot -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-parent</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>

